[project]
name = "proxy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
]

[project.scripts]
proxy = "proxy:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
